apps/unifi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-unifi
spec:
  ports:
    - name: https
      protocol: TCP
      port: 11443
      targetPort: 11443
