apps/unifi/slice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-unifi-slice
  labels:
    kubernetes.io/service-name: external-unifi
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 11443
endpoints:
  - addresses:
      - "192.168.31.208"
    conditions:
      ready: true
