apps/unifi/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: unifi-route
spec:
    parentRefs:
        - name: gatewayapi
          namespace: traefik
          sectionName: https
    hostnames:
        - ENC[AES256_GCM,data:m1uR8/K2QBriNEba3s1a,iv:vOvm2iQT8Ic29sNeh9laf/nvbAwVKcTpvxXe6pv8L9o=,tag:Bk3Catgcb07PO1117m+Aqw==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          filters:
            - type: ExtensionRef
              extensionRef:
                group: traefik.io
                kind: Middleware
                name: default-headers
          backendRefs:
            - name: external-unifi
              port: 11443
sops:
    age:
        - enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4Y3BQTDluQ2J6dGN3clg1
[...]
            W5cw/I3qkWi656PWeDYLsQaS3Kau8ueSsdJXc2/r8Te7Rg4sxZDXcw==
            -----END AGE ENCRYPTED FILE-----
          recipient: age149cx2m4rwfw6argx9fam62vjtcjgeuepd78ej8f0mcpatdgxdqfslqu454
    encrypted_regex: ^(hostnames)$
    lastmodified: "2026-08-30T19:16:08Z"
    mac: ENC[AES256_GCM,data:nLE1Lp/Y1AnmU2DWnzc3/Yx5FVCGcrEE0EjAIqkOE/tS10jCpP36u9GREzQfxrS4e86HaytOCvnteVy63XKEXllRiN6bDTLB7tco+dZZnA4MKnj43olo0p+EtfOE8AUn1rwfrP8aGoP8G6KVUkbHjg8D6427ZTEdlqyJAQ8C6DE=,iv:cTs9Px/Lw/iZve1Xhk7TycO4PctSh/XJ3cDnf/NtREU=,tag:OULPiAH0ayH7YOVXFL0DDw==,type:str]
    version: 3.13.3
